--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,28 @@
 
 /* Your CSS Code here. */
+  body {
+        margin: 0;
+        height: 100vh;
+        background-color: #f0f0f0;
+      }
+      .moviePic {
+        height: 300px;
+        width: 200px;
+        opacity: 0.9;
+      }
+      .moviedes {
+        position: absolute;
+        top: 8px;
+        right: 0px;
+        bottom: 450px;
+      }
+      .movieDetail {
+        position: absolute;
+        top: 100px;
+        right: 0px;
+        bottom: 450px;
+        width: 60%;
+        transform: translate(0, -50%);
+        text-align: center;
+        font-size: 18px;
+      }
